# proj_2025_sdm

./: .gitignore  404.html  Glorys_data.ipynb  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
contributors/Jamon/: 1_PACE_BRT_SDM_jj.ipynb  BRT Intro.ipynb
contributors/artem/: SAM_PACE_matchup.ipynb
contributors/eli/: 2_SDM_python_20250804-Copy1.ipynb  Data_Prep_CNN.ipynb  Get_monthly_Kd.ipynb  Glorys_data-Copy1.ipynb  map_birds.ipynb
contributors/fred/: 1_SDM_python_20250804.ipynb  2_SDM_python_20250804.ipynb  3_Temperature_SSS_CHLDownload.ipynb  README.md  map_birds.ipynb  monthly_moana.ipynb
contributors/fred/data/: BoundingBox.shp  BoundingBox.shx  whales.csv
contributors/haley/: 1_PACE_BRT_SDM.ipynb  N_PACE_BRT_SDM_1.ipynb  PACE_BRT_SDM.ipynb  PACE_BRT_SDM_1.ipynb  PACE_BRT_SDM_2a.ipynb  PACE_BRT_SDM_FINAL.ipynb  PACE_BRT_SDM_hs.ipynb  README.md  Synan_SSS_SAM.ipynb  Synan_SSS_SAM_1.ipynb  Synan_SSS_SAM_extract.ipynb  haley.md  match_fun.ipynb  satellite_insitu_matchups.ipynb  satellite_insitu_matchups_thomas.ipynb  untitled.py
contributors/sajna/: scipy_fn.ipynb
data/: README.md
docs/: index.md  reference.md
docs/examples/: simple_bbox.ipynb  trawl_viz.ipynb
examples/simple_bbox/: index.html
examples/trawl_viz/: index.html
reference/: index.html
search/: search_index.json
src/sdm/: __init__.py  access_data.py  core.py  viz.py
